<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gunmetal_grey"
    android:orientation="vertical"
    tools:context=".LoginRegister.LoginActivity">

    <TextView
        android:id="@+id/login_tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textSize="50sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_bullet_journal"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_below="@+id/login_tv_appname" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_layout_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv_appname"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user_icon"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="5dp"
            android:hint="@string/loginHint"
            android:inputType="text"
            android:layout_marginBottom="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout_username"
        android:layout_centerHorizontal="true"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="15sp">

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_icon"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn_signin"
        android:layout_alignLeft="@+id/login_btn_signin"
        android:layout_alignRight="@+id/login_btn_signin"
        android:layout_marginTop="8dp"
        android:textColor="@color/red"
        android:gravity="center"
        android:id="@+id/login_tv_incorrectLogin"/>

    <Button
        android:id="@+id/login_btn_signin"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:text="@string/signInButton"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/login_tv_register"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="No account? REGISTER"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:textSize="15sp"/>

</RelativeLayout>