<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scheduleCard_tv_eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_margin="2dp"
                android:text="EVENT NAME"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/scheduleCard_tv_date"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleCard_tv_eventName"
                android:padding="2dp"
                android:layout_margin="2dp"
                android:text="EVENT DATE" />

            <TextView
                android:id="@+id/scheduleCard_tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleCard_tv_time"
                android:padding="2dp"
                android:text="EVENT LOCATION"
                android:layout_margin="2dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/scheduleCard_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/scheduleCard_tv_date"
                android:layout_toRightOf="@+id/scheduleCard_tv_date"
                android:padding="2dp"
                android:layout_margin="2dp"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/scheduleCard_iv_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/scheduleCard_tv_location"
                android:layout_marginVertical="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/map" />

            <Button
                android:id="@+id/scheduleCard_btn_edit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleCard_iv_image"
                android:backgroundTint="@color/dark_gray"
                android:text="@string/edit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/scheduleCard_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleCard_iv_image"
                android:background="@color/white"
                android:text="@string/delete"
                android:textColor="@color/dark_gray"
                android:layout_toEndOf="@+id/scheduleCard_btn_edit"
                android:layout_toRightOf="@+id/scheduleCard_btn_edit" />

            <ImageButton
                android:id="@+id/scheduleCard_ib_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleCard_iv_image"
                android:layout_alignTop="@+id/scheduleCard_btn_delete"
                android:layout_alignBottom="@+id/scheduleCard_btn_delete"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_favorite"
                android:contentDescription="@string/favourite"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:id="@+id/scheduleCard_ib_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleCard_iv_image"
                android:layout_alignTop="@+id/scheduleCard_btn_delete"
                android:layout_alignBottom="@+id/scheduleCard_btn_delete"
                android:layout_toLeftOf="@+id/scheduleCard_ib_favourite"
                android:background="@color/transparent"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_alarm" />

            <ImageButton
                android:id="@+id/scheduleCard_ib_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleCard_iv_image"
                android:layout_alignTop="@+id/scheduleCard_btn_delete"
                android:layout_alignBottom="@+id/scheduleCard_btn_delete"
                android:layout_toLeftOf="@+id/scheduleCard_ib_alarm"
                android:background="@color/transparent"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_location" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>